--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Journey of Understanding</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://cameron-rx.github.io">Journey of Understanding</a></h2>
+    <h2><a href="https://cameron-rx.github.io/">Journey of Understanding</a></h2>
     <nav>
         <ul>
             
